2008-12-05  Neal H. Walfield  <neal@gnu.org>

	* addr.h (PTR_TO_PAGE): Define.

2008-12-05  Neal H. Walfield  <neal@gnu.org>

	* addr.h: Don't include <l4/math.h>.  Include <math.h>.
	(addr_depth): Use vg_lsb64, not l4_lsb64.

2008-12-04  Neal H. Walfield  <neal@gnu.org>

	* t-addr-trans.c: Don't include <l4/math.h> or <l4/types.h>.
	Include <stdint.h>.
	(main): Don't use L4_WORDSIZE.  Just take the size of a uintptr_t.

2008-12-04  Neal H. Walfield  <neal@gnu.org>

	* lock.h: Don't include <atomic.h>.
	(ss_lock_trace_dump): Set FUNC to 0, not NULL.

2008-12-04  Neal H. Walfield  <neal@gnu.org>

	* bits/ia32/math.h: New file.
	* math.h: New file.
	* headers.m4: Link sysroot/include/hurd/math.h to hurd/math.h and
	sysroot/include/hurd/bits/math.h to hurd/bits/${arch}/math.h.

2008-12-04  Neal H. Walfield  <neal@gnu.org>

	* mutex.h: Don't include <atomic.h>.
	(ss_mutex_lock): Rewrite to use gcc's __sync functions.  Add
	asserts.
	(ss_mutex_unlock): Likewise.
	(ss_mutex_trylock): Likewise.

2008-11-18  Neal H. Walfield  <neal@gnu.org>

	* cap.h (cap_copy_x): Correctly detect type mismatches.

2008-11-14  Neal H. Walfield  <neal@gnu.org>

	* rpc.h: Include <l4/space.h>.
	(RPC_): When receiving a message, accept any mapping.

2008-11-12  Neal H. Walfield  <neal@gnu.org>

	* trace.h (trace_buffer_dump): Take additional arguments func and
	line.  Print them.
	(trace_buffer_dump): Also define as a macro.

2008-11-11  Neal H. Walfield  <neal@gnu.org>

	* cap.h (struct cap): Make priority signed.

2008-11-04  Neal H. Walfield  <neal@gnu.org>

	* cap.h (OBJECT_PRIORITY_BITS): Change to 7.
	(OBJECT_PRIORITY_LEVELS): Define.
	(OBJECT_PRIORITY_LRU): Don't define.  Update users.
	(struct object_policy): Remove field pad0.  Change to a uint8_t.
	(OBJECT_POLICY): Update.

2008-08-16  Neal H. Walfield  <neal@gnu.org>

	* thread.h (thread_start_sp_ip): New function.

2008-07-04  Neal H. Walfield  <neal@gnu.org>

	* mutex.h (ss_mutex_lock): Only complain about a possible deadlock