@@ -1,3 +1,8 @@
+2008-12-10  Neal H. Walfield  <neal@gnu.org>
+
+	* stddef.h: When checking if compiling for i386, check if i386 is
+	defined, not if it is true.
+
 2008-12-05  Neal H. Walfield  <neal@gnu.org>
 
 	* addr.h (PTR_TO_PAGE): Define.
